# launchpad

./: README.md
axum-server/: Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yml  mise.toml
axum-server/src/: main.rs  routes.rs
axum-server/src/apps/: mod.rs
axum-server/src/apps/game/: routes.rs
axum-server/src/apps/users/: routes.rs
react/: README.md  index.html  mise.toml  package.json
react/src/: main.tsx
react/src/components/: Root.tsx  root.tsx
react/src/phaser/: constants.ts  main.tsx  store.ts  styles.css
react/src/phaser/classes/: game-image.ts
react/src/phaser/components/: main.tsx  ui.tsx
react/src/phaser/scenes/: boot.ts  game.ts
react/src/routes/: __root.tsx  index.tsx
