[package]
name = "axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.42.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
